_k8s/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: fakelogin-loadbalancer
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: fakelogin
