_k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fakelogin
spec:
  selector:
    app: fakelogin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
