_k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: "fakelogin.bahapp.com.br"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: fakelogin
                port:
                  number: 80
